--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,10 @@
         "php": "^8.0.2",
         "guzzlehttp/guzzle": "^7.2",
         "intervention/image": "^2.7",
-        "laravel/framework": "^9.19",
+        "laravel/framework": "^9.27",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
+        "league/flysystem-aws-s3-v3": "^3.2",
         "livewire/livewire": "^2.10",
         "spatie/laravel-permission": "^5.5",
         "wireui/wireui": "^1.13"
